# CO2-Device

./: .gitignore  Cargo.toml  Readme.md  debug.gdb
Documentation/: Proposal.md  hardware.md
interface_design/: big_numbers_bw.xcf  big_numbers_wip.xcf  display_all_values copy.sketch  display_errors.sketch  display_single_values.sketch  mid_numbers.xcf  mid_numbers_bw.xcf  mid_numbers_bw51x32_.raw
measuring_device/: Cargo.toml
measuring_device/.cargo/: config
measuring_device/Pyplothing/: main.py
measuring_device/src/: main.rs
measuring_device/src/lib/: buzz.rs  epaper.rs  led.rs  mod.rs  types.rs
measuring_device/src/lib/fonts/: mid_numbers_bw51x32_320.raw
measuring_device/src/lib/graphics/: image.raw
nrf52-hal-common-0.8.0/: Cargo.toml
nrf52-hal-common-0.8.0/src/: lib.rs  pwm.rs
nrf52832-hal-0.8.0/: .cargo_vcs_info.json  Cargo.toml
radio_test/utilities/draw-client-tester/: Cargo.toml
radio_test/utilities/draw-client-tester/src/: main.rs
radio_test/utilities/draw-modem/: Cargo.toml
src/: main.rs
src/lib/: mod.rs
