[workspace]
members = ["measuring_device",
            "radio_test/protocol",
            "radio_test/utilities/draw-modem",
            "radio_test/utilities/draw-server",
            ]

[patch.crates-io.nrf52832-hal]
path = './../nrf52-hal/nrf52832-hal'

[patch.crates-io.dwm1001]
path = './../rust-dw1000/dwm1001'
