[workspace]
members = ["measuring_device",
            "radio_test/protocol",
            "radio_test/utilities/draw-modem",
            "radio_test/utilities/draw-server",
            ]


[patch.crates-io.nrf52-hal-common]
path = './../nrf52-hal-common-0.8.0'

[patch.crates-io.nrf52832-hal]
path = './../nrf52832-hal-0.8.0'
