[package]
name = "CO2-sensor"
version = "0.1.0"
authors = ["Mirabellensaft <tanks@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
panic-halt  = "0.2"
cortex-m-rt = "0.6.10"
cortex-m    = "=0.5.8"
heapless    = "0.4.0"
nb = "*"

crc_all = "0.2.0"
scd30 = { git = "https://github.com/sinuss/scd30-rs/" }
cortex-m-semihosting = "0.3.5"


[dependencies.dwm1001]
version = "0.2.1"
features = ["dev", "rt"]


[patch.crates-io.nrf52832-hal]
version = "0.8.0"
default-features = false
path = '../../nrf52-hal/nrf52832-hal'
features = ["xxAA-package"]
