[package]
name = "CO2-sensor"
version = "0.1.0"
authors = ["Mirabellensaft <tanks@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
panic-halt  = "0.2"
cortex-m-rt = "0.6.10"
cortex-m    = "=0.6.1"
heapless    = "0.5.1"
nb = "0.1.2"

crc_all = "0.2.0"
scd30 = { git = "https://github.com/sinuss/scd30-rs/" }
cortex-m-semihosting = "0.3.5"


[dependencies.dwm1001]
version = "0.2.1"
features = ["dev", "rt"]

[dependencies.nrf52832-hal]
version = "=0.8.0"
default-features = false
features = ["xxAA-package"]

[dependencies.nrf52-hal-common]
version = "=0.8.0"
